@@ -4,6 +4,8 @@
    xmlns:z3c="http://namespaces.zope.org/z3c"
    xmlns:gocept="http://namespaces.gocept.com/zcml">
 
+  <adapter factory=".edit.PersonCount" />
+
   <!-- Root folder view -->
   <z3c:pagelet
      name="addAddressBook.html"
@@ -64,6 +66,21 @@
      layer="icemac.addressbook.browser.interfaces.IAddressBookLayer"
      />
 
+  <z3c:pagelet
+     name="delete_address_book.html"
+     for="icemac.addressbook.interfaces.IAddressBook"
+     permission="icemac.addressbook.EditAddressBook"
+     layer="icemac.addressbook.browser.interfaces.IAddressBookLayer"
+     class=".edit.DeleteForm"
+     />
+
+  <z3c:pagelet
+     name="delete_content.html"
+     for="icemac.addressbook.interfaces.IAddressBook"
+     permission="icemac.addressbook.EditAddressBook"
+     layer="icemac.addressbook.browser.interfaces.IAddressBookLayer"
+     class=".edit.DeleteContentForm"
+     />
 
   <!-- Add menu -->
   <browser:viewlet
@@ -75,14 +92,6 @@
      permission="icemac.addressbook.AddPerson"
      layer="icemac.addressbook.browser.interfaces.IAddressBookLayer"
      weight="1"
-     />
-
-  <z3c:pagelet
-     name="delete_address_book.html"
-     for="icemac.addressbook.interfaces.IAddressBook"
-     permission="icemac.addressbook.EditAddressBook"
-     layer="icemac.addressbook.browser.interfaces.IAddressBookLayer"
-     class=".edit.DeleteForm"
      />
 
 
